optimize the locator Page Element