@@ -3,284 +3,240 @@ package com.hsbc.cmb.hk.dbb.automation.framework.web.page;
 import com.hsbc.cmb.hk.dbb.automation.framework.web.page.base.BasePage;
 import com.hsbc.cmb.hk.dbb.automation.framework.web.utils.TimeoutConfig;
 import com.microsoft.playwright.Locator;
+import com.microsoft.playwright.TimeoutError;
 import com.microsoft.playwright.options.WaitForSelectorState;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.AbstractList;
-import java.util.List;
+import java.util.*;
+import java.util.function.Consumer;
 
-/**
- * Dynamic list of PageElements with smart multi-stage waiting.
- * Re-queries elements on each access to ensure freshness.
- * 
- * <pre>
- * @Element("[data-i18n='button_logon']")
- * public List&lt;PageElement&gt; loginButtons; 
- * 
- * // Iterate all buttons
- * for (PageElement button : loginButtons) {
- *     button.click();
- * } 
- * // Get first element (with auto-wait: ATTACHED -> VISIBLE -> DOM stable)
- * loginButtons.get(0).click();
- * </pre>
- */
-public class PageElementList extends AbstractList<PageElement> {
+public final class PageElementList extends AbstractList<PageElement> {
     private static final Logger logger = LoggerFactory.getLogger(PageElementList.class);
     private final String selector;
     private final BasePage page;
-    
+    private final int defaultTimeoutSec = TimeoutConfig.getElementCheckTimeout() / 1000;
+
+    // ========================== 构造（线程安全） ==========================
     public PageElementList(String selector, BasePage page) {
-        if (selector == null || selector.trim().isEmpty()) {
-            throw new IllegalArgumentException("Selector cannot be null or empty");
-        }
+        if (selector == null || selector.isBlank())
+            throw new IllegalArgumentException("Selector cannot be null or blank");
+        if (page == null)
+            throw new IllegalArgumentException("BasePage cannot be null");
         this.selector = selector;
         this.page = page;
     }
-    
+
+    public Locator locator() {
+        return page.locator(selector);
+    }
+
     public String getSelector() {
         return selector;
     }
-    
-    private BasePage getPage() {
-        if (page == null) {
-            BasePage currentPage = BasePage.getCurrentPage();
-            if (currentPage == null) {
-                throw new IllegalStateException("No BasePage instance found. Please ensure page is initialized.");
-            }
-            return currentPage;
+
+    // ========================== 核心等待 ==========================
+    public void waitForExists(int timeoutSec) {
+        try {
+            locator().waitFor(new Locator.WaitForOptions()
+                    .setState(WaitForSelectorState.ATTACHED)
+                    .setTimeout((long) timeoutSec * 1000));
+        } catch (Exception e) {
+            throw new IllegalStateException(String.format("[%ds] No elements attached: %s", timeoutSec, selector), e);
         }
-        return page;
+    }
+
+    public void waitForVisible(int timeoutSec) {
+        try {
+            locator().waitFor(new Locator.WaitForOptions()
+                    .setState(WaitForSelectorState.VISIBLE)
+                    .setTimeout((long) timeoutSec * 1000));
+        } catch (Exception e) {
+            throw new IllegalStateException(String.format("[%ds] No elements visible: %s", timeoutSec, selector), e);
+        }
     }
 
     /**
-     * 获取所有匹配的 Locator（等待至少1个元素可见）
+     * 等待元素数量 ≥ expectCount
+     * ✅ expectCount = 0 立即返回
+     * ✅ 不依赖 JS
+     * ✅ 超时精确
+     * ✅ 支持 CSS + XPath
      */
-    public List<Locator> allLocators() {
-        return allLocators(TimeoutConfig.getElementCheckTimeout() / 1000);
+    public void waitForCount(int expectCount, int timeoutSec) {
+        if (expectCount == 0) {
+            return;
+        }
+
+        long timeoutMs = (long) timeoutSec * 1000;
+        long start = System.currentTimeMillis();
+
+        try {
+            locator().first().waitFor(new Locator.WaitForOptions()
+                    .setState(WaitForSelectorState.ATTACHED)
+                    .setTimeout(timeoutMs));
+
+            int actual = locator().count();
+            if (actual >= expectCount) return;
+
+            while (System.currentTimeMillis() - start < timeoutMs) {
+                page.waitForTimeout(150);
+                actual = locator().count();
+                if (actual >= expectCount) return;
+            }
+
+            throw new IllegalStateException(
+                    String.format("Expected ≥ %d, found %d: %s", expectCount, actual, selector));
+
+        } catch (TimeoutError e) {
+            int actual = locator().count();
+            throw new IllegalStateException(
+                    String.format("Timeout after %ds: expected ≥ %d, found %d: %s",
+                            timeoutSec, expectCount, actual, selector), e);
+        }
     }
 
-    /**
-     * 获取所有匹配的 Locator（等待至少1个元素可见）
-     * 
-     * @param timeoutSeconds 超时时间（秒）
-     */
-    public List<Locator> allLocators(int timeoutSeconds) {
-        waitForVisible(timeoutSeconds);
-        return getPage().locator(selector).all();
-    }
-
-    /**
-     * 获取元素数量（等待至少1个元素存在）
-     */
+    // ========================== 大小（性能优化版） ==========================
     @Override
     public int size() {
-        return size(TimeoutConfig.getElementCheckTimeout() / 1000);
+        return size(defaultTimeoutSec);
     }
 
-    /**
-     * 获取元素数量（等待至少1个元素存在）
-     * 
-     * @param timeoutSeconds 超时时间（秒）
-     */
-    public int size(int timeoutSeconds) {
-        waitForExists(timeoutSeconds);
-        return getPage().locator(selector).count();
+    public int size(int timeoutSec) {
+        try {
+            Locator loc = locator();
+            loc.first().waitFor(new Locator.WaitForOptions()
+                    .setState(WaitForSelectorState.ATTACHED)
+                    .setTimeout((long) timeoutSec * 1000));
+            return loc.count();
+        } catch (TimeoutError e) {
+            return 0;
+        } catch (Exception e) {
+            logger.warn("Unexpected error getting size: {}", selector, e);
+            return 0;
+        }
     }
 
+    // ========================== 获取元素（无竞态） ==========================
     @Override
     public PageElement get(int index) {
-        if (index < 0) {
-            throw new IndexOutOfBoundsException("Index cannot be negative: " + index);
-        }
-        waitForElementReady(index);
+        int currentSize = size();
+        Objects.checkIndex(index, currentSize);
 
-        // Final verification (should always pass if waitForElementReady succeeded)
-        int count = getPage().locator(selector).count();
-        if (index >= count) {
+        try {
+            Locator target = locator().nth(index);
+            target.waitFor(new Locator.WaitForOptions()
+                    .setState(WaitForSelectorState.VISIBLE)
+                    .setTimeout(TimeoutConfig.getElementCheckTimeout()));
+
+            return new PageElementWithIndex(selector, page, index, target);
+        } catch (Exception e) {
             throw new IllegalStateException(
-                "Element not found: expected index " + index + 
-                " but only found " + count + " element(s)" +
-                ", selector: " + selector);
-        }
-        return new PageElementWithIndex(selector, page, index);
-    }
-
-    /**
-     * 等待至少一个元素存在
-     */
-    public void waitForExists(int timeoutSeconds) {
-        try {
-            locator().waitFor(new Locator.WaitForOptions()
-                .setState(WaitForSelectorState.ATTACHED)
-                .setTimeout(timeoutSeconds * 1000L));
-        } catch (Exception e) {
-            throw new IllegalStateException("No elements found for selector '" + selector + 
-                "' within " + timeoutSeconds + "s", e);
+                    String.format("Failed to get element index=%d/%d, selector=%s",
+                            index, currentSize, selector), e);
         }
     }
 
-    /**
-     * 等待至少一个元素可见
-     */
-    public void waitForVisible(int timeoutSeconds) {
-        try {
-            locator().waitFor(new Locator.WaitForOptions()
-                .setState(WaitForSelectorState.VISIBLE)
-                .setTimeout(timeoutSeconds * 1000L));
-        } catch (Exception e) {
-            throw new IllegalStateException("No visible elements found for selector '" + selector + 
-                "' within " + timeoutSeconds + "s", e);
-        }
-    }
+    // ========================== 迭代器 ==========================
+    @Override
+    public Iterator<PageElement> iterator() {
+        int count = size();
+        if (count == 0) return Collections.emptyIterator();
 
-    /**
-     * 等待指定数量的元素存在
-     */
-    public void waitForCount(int expectedCount, int timeoutSeconds) {
-        long startTime = System.currentTimeMillis();
-        int interval = TimeoutConfig.getPollingInterval();
-        
-        while (System.currentTimeMillis() - startTime < timeoutSeconds * 1000L) {
-            int count = getPage().locator(selector).count();
-            if (count >= expectedCount) {
-                return;
+        return new Iterator<>() {
+            private int idx = 0;
+
+            @Override
+            public boolean hasNext() {
+                return idx < count;
             }
-            getPage().waitForTimeout(interval);
-        }
-        
-        throw new IllegalStateException("Expected at least " + expectedCount + 
-            " elements for selector '" + selector + "', but found only " + 
-            getPage().locator(selector).count() + " within " + timeoutSeconds + "s");
+
+            @Override
+            public PageElement next() {
+                if (!hasNext()) throw new NoSuchElementException();
+                return get(idx++);
+            }
+        };
     }
 
-    /**
-     * Smart multi-stage wait ensuring the target element is ready for interaction.
-     * Uses Playwright's native waitFor (auto-retry, no manual polling loop).
-     */
-    private void waitForElementReady(int targetIndex) {
-        int timeout = TimeoutConfig.getElementCheckTimeout();
-
-        // Stage 0: Page stable before searching
-        try {
-            getPage().waitForDOMContentLoaded(Math.max(TimeoutConfig.getStabilizeTimeout() / 1000, 5));
-        } catch (Exception e) {
-            logger.debug("Page stability check skipped: {}", e.getMessage());
-        }
-
-        // Stage 1 & 2: Single smart waitFor call handles existence + visibility
-        try {
-            locator().nth(targetIndex).waitFor(new Locator.WaitForOptions()
-                .setState(WaitForSelectorState.VISIBLE)
-                .setTimeout(timeout));
-        } catch (Exception e) {
-            final int finalCount = size();
-            if (finalCount == 0) {
-                throw new IllegalStateException(String.format(
-                    "No elements found for selector '%s' within %dms. Verify selector.",
-                    selector, timeout));
-            } else if (finalCount <= targetIndex) {
-                throw new IllegalStateException(String.format(
-                    "Not enough elements: needed index %d, but found only %d for selector '%s'.",
-                    targetIndex, finalCount, selector));
-            } else {
-                throw new IllegalStateException(String.format(
-                    "Element at index %d for '%s' did not become visible within %dms.",
-                    targetIndex, selector, timeout));
+    // ========================== 安全遍历 ==========================
+    public void forEachSafe(Consumer<PageElement> action) {
+        int count = size();
+        for (int i = 0; i < count; i++) {
+            try {
+                action.accept(get(i));
+            } catch (Exception e) {
+                logger.warn("Skip element at index [{}] for selector: {}", i, selector, e);
             }
         }
     }
-    
-    public Locator locator() {
-        return getPage().locator(selector);
-    }
-    
-    /**
-     * 检查列表是否为空（不等待，立即返回）
-     */
+
+    // ========================== 空判断 ==========================
+    @Override
     public boolean isEmpty() {
-        return getPage().locator(selector).count() == 0;
+        return isEmpty(defaultTimeoutSec);
     }
 
-    /**
-     * 检查列表是否为空（等待指定时间后再判断）
-     */
-    public boolean isEmpty(int timeoutSeconds) {
+    public boolean isEmpty(int timeoutSec) {
         try {
-            waitForExists(timeoutSeconds);
+            locator().first().waitFor(new Locator.WaitForOptions()
+                    .setState(WaitForSelectorState.ATTACHED)
+                    .setTimeout((long) timeoutSec * 1000));
             return false;
-        } catch (IllegalStateException e) {
+        } catch (Exception e) {
             return true;
         }
     }
-    
-    /**
-     * Get first element (throws if empty after waiting)
-     */
-    public PageElement first() {
-        return get(0);
-    }
-    
-    /**
-     * Get last element (throws if empty after waiting)
-     */
-    public PageElement last() {
-        int count = size();
-        if (count == 0) {
-            throw new IllegalStateException("No elements found for selector: " + selector);
-        }
-        return get(count - 1);
-    }
-    
-    /**
-     * 检查是否存在元素（不等待，立即返回）
-     */
+
     public boolean hasElements() {
         return !isEmpty();
     }
 
-    /**
-     * 检查是否存在元素（等待指定时间后再判断）
-     */
-    public boolean hasElements(int timeoutSeconds) {
-        try {
-            waitForExists(timeoutSeconds);
-            return true;
-        } catch (IllegalStateException e) {
-            return false;
+    // ========================== 快捷方法 ==========================
+    public PageElement first() {
+        if (isEmpty()) {
+            throw new IllegalStateException("Element list is empty, cannot get first: " + selector);
         }
+        return get(0);
     }
-    
+
+    public PageElement last() {
+        int s = size();
+        if (s == 0) {
+            throw new IllegalStateException("Element list is empty, cannot get last: " + selector);
+        }
+        return get(s - 1);
+    }
+
     /**
-     * 等待至少一个元素存在且可见（默认超时时间）
+     * ⚠️ 返回当前 DOM 快照，非实时集合
+     * 全版本 Playwright 兼容
      */
+    public List<Locator> allLocators() {
+        waitForVisible(defaultTimeoutSec);
+        return locator().all();
+    }
+
     public void waitFor() {
-        waitFor(TimeoutConfig.getElementCheckTimeout() / 1000);
+        waitForVisible(defaultTimeoutSec);
     }
 
-    /**
-     * 等待至少一个元素存在且可见
-     */
-    public void waitFor(int timeoutSeconds) {
-        waitForVisible(timeoutSeconds);
-    }
-    
-
-    private static class PageElementWithIndex extends PageElement {
+    // ========================== 缓存定位器内部类 ==========================
+    private static final class PageElementWithIndex extends PageElement {
         private final int index;
-        
-        public PageElementWithIndex(String selector, BasePage page, int index) {
+        private final Locator cachedLocator;
+
+        public PageElementWithIndex(String selector, BasePage page, int index, Locator cachedLocator) {
             super(selector, page);
             this.index = index;
+            this.cachedLocator = Objects.requireNonNull(cachedLocator);
         }
-        
+
         @Override
         public Locator locator() {
-            return super.locator().nth(index);
+            return cachedLocator;
         }
-        
+
         public int getIndex() {
             return index;
         }
